change database to json file

--- a/upload.html
+++ b/upload.html
@@ -159,6 +159,12 @@
 				<li>Change create file to render web scrape.</li>
 			</ul>
 		</li>
+		<li>
+			Update 09 Dec 2015 : 
+			<ul>
+				<li>Change database to json file because session have a limit 120mb.</li>
+			</ul>
+		</li>
 	</ul>
 	<div id="console"></div>
 	<div id="footer">Develop by <a href="http://agus.pondokprogrammer.com" target="blank">Agus Nurwanto</a>.</div>
